# ebpf-strace

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  vmlinux.h
.ci/: build-arm64-linux.sh  build-arm64-rootfs.sh  install-arm64-toolchains.sh  strace-test-arm64-vm.sh  strace-test.sh
Documents/: support.md
bpf/: access.c  bind.c  chdir.c  chmod.c  clone.c  close.c  desc.c  dirent.c  dup.c  epoll.c  execve.c  exit.c  fchownat.c  fcntl.c  getcwd.c  getpid.c  getrandom.c  io.c  ioctl.c  ipc_shm.c  link.c  listen.c  lseek.c  mem.c  mkdir.c  msg_ent.h  net.c  open.c  open_close.c  poll.c  prctl.c  readlink.c  renameat.c  resource.c  rmdir.c  rt_sigreturn.c  shutdown.c  signal.c  stat.c  strace.bpf.c  (+7 more)
scripts/: pre-commit.hook  strace-test.sh
src/: access.rs  bind.rs  chdir.rs  chmod.rs  clone.rs  common.rs  config.rs  desc.rs  dirent.rs  dup.rs  epoll.rs  execve.rs  exit.rs  fchownat.rs  fcntl.rs  getcwd.rs  getpid.rs  getrandom.rs  handler.rs  io.rs  ioctl.rs  ipc_shm.rs  link.rs  listen.rs  lseek.rs  main.rs  mem.rs  mkdir.rs  net.rs  open.rs  open_close.rs  poll.rs  prctl.rs  readlink.rs  renameat.rs  resource.rs  rmdir.rs  rt_sigreturn.rs  shutdown.rs  signal.rs  (+10 more)
tests/: accept.c  access.c  bind.c  brk.c  chdir.c  chmod.c  chown.c  clone.c  do_syscall.c  do_syscall.h  dup.c  dup3.c  epoll_create1.c  epoll_ctl.c  epoll_wait.c  execve.c  fchdir.c  fchmod.c  fchown.c  fcntl.c  fdatasync.c  file.c  fstat.c  fsync.c  ftruncate.c  getcwd.c  getdents64.c  getpgid.c  getrandom.c  getsid.c  ioctl.c  ipc_shm.c  link.c  listen.c  lseek.c  lstat.c  madvise.c  map.c  (+58 more)
(+34 files in other folders)
