[package]
name = "ebpf-strace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
ctrlc = "3.1"
libc = "0.2.154"
libbpf-rs = "0.23.0"
plain = "0.2.3"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
clap = { version = "4.5.4", features = ["derive"] }

[build-dependencies]
anyhow = "1.0"
libbpf-cargo = "0.23.0"
build-target = "0.4.0"
which = "7.0.0"
